# i-gng

./: .gitignore  MANIFEST.in  README.md  example_gng.py  pyproject.toml  setup.cfg  setup.py
inst/include/gng/: gng_algorithm.h  gng_configuration.h
inst/include/utils/: utils.h
python/gng/: __init__.py  wrapper.py
python/growing_neural_gas.egg-info/: PKG-INFO  SOURCES.txt
src/gng/: gng_algorithm.cpp  gng_module.cpp  gng_server.cpp
tests/python/: test_wrapper.py
