[metadata]
name = growing-neural-gas
version = 0.1.0
description = Python bindings for the Growing Neural Gas algorithm
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = Stanislaw "kudkudak" Jastrzebski and contributors
url = https://github.com/gmum/Growing-Neural-Gas
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C++
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
package_dir =
    = python
python_requires = >=3.9
install_requires =
    numpy>=1.23
zip_safe = False
include_package_data = True

[options.packages.find]
where = python

